[gd_scene load_steps=8 format=3 uid="uid://dbkbcp753u33p"]

[ext_resource type="Script" uid="uid://d0emdqkydvqc2" path="res://scenes/map.gd" id="1_vcsgt"]
[ext_resource type="Texture2D" uid="uid://fgaapbg5fdsi" path="res://assets/map-background.png" id="2_c01mt"]
[ext_resource type="Script" uid="uid://embxqtjdjepy" path="res://scenes/world_dialog.gd" id="3_nxtc6"]
[ext_resource type="PackedScene" uid="uid://b5gf5oqku1coh" path="res://scenes/CombatDialog.tscn" id="4_jlsqs"]
[ext_resource type="Script" uid="uid://dbsjxfc6qxioq" path="res://scenes/battlefield.gd" id="5_q8u5g"]
[ext_resource type="Script" uid="uid://blc5k6d7kh62s" path="res://scenes/admiral.gd" id="6_c01mt"]

[sub_resource type="Environment" id="Environment_c01mt"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.1
glow_blend_mode = 1

[node name="Main" type="Node2D"]

[node name="Map" type="Node2D" parent="."]
script = ExtResource("1_vcsgt")

[node name="Background" type="TextureRect" parent="Map"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1440.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c01mt")
expand_mode = 2

[node name="ConnectionLines" type="Line2D" parent="Map"]
width = 5.0
default_color = Color(0.475884, 0.313445, 0.946131, 0.290196)

[node name="PendingMoves" type="Node2D" parent="Map"]

[node name="UI" type="Control" parent="Map"]
layout_mode = 3
anchors_preset = 0
offset_right = 1440.0
offset_bottom = 900.0

[node name="RunDebug" type="Button" parent="Map/UI"]
layout_mode = 0
offset_left = 1234.0
offset_top = 15.0
offset_right = 1327.0
offset_bottom = 46.0
text = "Run Debug"

[node name="EndTurn" type="Button" parent="Map/UI"]
layout_mode = 0
offset_left = 1345.0
offset_top = 15.0
offset_right = 1423.0
offset_bottom = 46.0
text = "End Turn"

[node name="Resources" type="Label" parent="Map/UI"]
layout_mode = 0
offset_left = 440.0
offset_top = 15.0
offset_right = 1015.0
offset_bottom = 38.0
text = "M: 0 | S: 0 | P: 0"
horizontal_alignment = 1

[node name="TurnCount" type="Label" parent="Map/UI"]
layout_mode = 0
offset_left = 23.0
offset_top = 15.0
offset_right = 77.0
offset_bottom = 38.0
text = "Turn: 1"

[node name="WorldDialog" type="PopupPanel" parent="Map/UI"]
size = Vector2i(109, 102)
script = ExtResource("3_nxtc6")

[node name="VBox" type="VBoxContainer" parent="Map/UI/WorldDialog"]
offset_left = 4.0
offset_top = 4.0
offset_right = 205.0
offset_bottom = 133.0

[node name="WorldName" type="Label" parent="Map/UI/WorldDialog/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Mode" type="HBoxContainer" parent="Map/UI/WorldDialog/VBox"]
layout_mode = 2

[node name="Shipyard" type="Button" parent="Map/UI/WorldDialog/VBox/Mode"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Shipyard"

[node name="Fleets" type="Button" parent="Map/UI/WorldDialog/VBox/Mode"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Fleets"

[node name="LineContainer" type="VBoxContainer" parent="Map/UI/WorldDialog/VBox"]
layout_mode = 2

[node name="Summary" type="Label" parent="Map/UI/WorldDialog/VBox"]
layout_mode = 2
horizontal_alignment = 2

[node name="Cmd" type="HBoxContainer" parent="Map/UI/WorldDialog/VBox"]
layout_mode = 2

[node name="Clear" type="Button" parent="Map/UI/WorldDialog/VBox/Cmd"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="Build" type="Button" parent="Map/UI/WorldDialog/VBox/Cmd"]
layout_mode = 2
size_flags_horizontal = 3
text = "Build"

[node name="All" type="Button" parent="Map/UI/WorldDialog/VBox/Cmd"]
layout_mode = 2
size_flags_horizontal = 3
text = "All"

[node name="Move" type="MenuButton" parent="Map/UI/WorldDialog/VBox/Cmd"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move..."

[node name="CombatDialog" parent="Map/UI" instance=ExtResource("4_jlsqs")]
visible = false

[node name="Dummy" type="Node2D" parent="Map"]
position = Vector2(-100, -100)

[node name="Battlefield" type="Node2D" parent="."]
visible = false
script = ExtResource("5_q8u5g")

[node name="Background" type="TextureRect" parent="Battlefield"]
offset_right = 1440.0
offset_bottom = 900.0
texture = ExtResource("2_c01mt")
expand_mode = 1

[node name="PlayerFleet" type="Node2D" parent="Battlefield"]

[node name="Admiral" type="Node" parent="Battlefield/PlayerFleet"]
script = ExtResource("6_c01mt")

[node name="AIFleet" type="Node2D" parent="Battlefield"]

[node name="Admiral" type="Node" parent="Battlefield/AIFleet"]
script = ExtResource("6_c01mt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_c01mt")

[connection signal="pressed" from="Map/UI/RunDebug" to="Map" method="_on_run_debug_pressed"]
[connection signal="pressed" from="Map/UI/EndTurn" to="Map" method="_on_end_turn_pressed"]
[connection signal="pressed" from="Map/UI/WorldDialog/VBox/Mode/Shipyard" to="Map/UI/WorldDialog" method="_on_shipyard_pressed"]
[connection signal="pressed" from="Map/UI/WorldDialog/VBox/Mode/Fleets" to="Map/UI/WorldDialog" method="_on_fleets_pressed"]
[connection signal="pressed" from="Map/UI/WorldDialog/VBox/Cmd/Clear" to="Map/UI/WorldDialog" method="_on_clear_pressed"]
[connection signal="pressed" from="Map/UI/WorldDialog/VBox/Cmd/Build" to="Map/UI/WorldDialog" method="_on_build_pressed"]
[connection signal="pressed" from="Map/UI/WorldDialog/VBox/Cmd/All" to="Map/UI/WorldDialog" method="_on_all_pressed"]
